+ V2 + Separación miperfil.css -> profile.css -> core.css + Mejora de templates + Registro automatico en el timeline

--- a/avatar/templates/avatar/add.html
+++ b/avatar/templates/avatar/add.html
@@ -8,10 +8,10 @@
 {% endblock %}
 
 {% block cf-title %}
-<hgroup>
+<div class="hgroup">
 	<h4 class="cn"> Imágen de perfil </h4>
 	<h6 class="ch"> Añade una foto de perfil </h6>
-</hgroup>
+</div>
 {% endblock %}
 
 {% block cf-form %}
