--- a/avatar/templates/avatar/base.html
+++ b/avatar/templates/avatar/base.html
@@ -2,7 +2,7 @@
     <head>
         <title>{% block title %}Configuración - Imágen de perfil.{% endblock %}</title>
 
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/miperfil.css" />
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/profile.css" />
     </head>
     <body>
         {% block content %}{% endblock %}
