--- a/avatar/templates/avatar/change.html
+++ b/avatar/templates/avatar/change.html
@@ -23,10 +23,10 @@ $(document).ready(function() {
 </script>
 {% endblock %}
 {% block cf-title %}
-<hgroup>
+<div class="hgroup">
 	<h4 class="cn"> Imágen de perfil </h4>
 	<h6 class="ch"> Elige y gestiona tus imágenes de perfil </h6>
-</hgroup>
+</div>
 {% endblock %}
 
 {% block cf-form %}
