--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -1,161 +1,2 @@
-html, body {
-  color: #555 !important;
-  font-family: "Open Sans", sans-serif !important;
-  font-size: 11.5px !important; }
-
-.account-search, .messages-search {
-  font-size: 3em;
-  color: #555;
-  border-bottom: 2px solid #e0e0e0;
-  padding: 10px;
-  display: block; }
-
-.messages-search {
-  position: relative;
-  top: 20px;
-  margin-bottom: 20px; }
-
-.container .personal-card {
-  background-color: #fff;
-  width: 100%;
-  margin-top: 20px;
-  height: 300px;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4); }
-
-.container .header {
-  height: 150px; }
-
-.container .personal-card .header .back-profile-user {
-  width: 100%;
-  height: 100%;
-  position: relative; }
-
-.container .personal-card .header .bg-user {
-  width: 80px;
-  height: 80px;
-  position: relative;
-  margin: auto;
-  display: block; }
-
-.container .personal-card .header .profile-user-bg {
-  position: relative;
-  margin-top: -80px;
-  width: 80px;
-  height: 80px;
-  border-radius: 3px;
-  box-shadow: 0 1px 5px #1e88e5;
-  cursor: pointer;
-  -webkit-transition: all 0.3s ease-in;
-  transition: all 0.3s ease-in; }
-  .container .personal-card .header .profile-user-bg img {
-    width: 100%;
-    height: 100%; }
-
-.container .personal-card .header .profile-user-bg:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  transform: scale(1.1);
-  border-color: #1e88e5;
-  opacity: 1; }
-
-.container .personal-card .header .like-him {
-  position: relative;
-  margin-top: -30px;
-  float: right;
-  margin-right: 20px;
-  background-color: #1e88e5;
-  color: #fff;
-  border-radius: 100%;
-  width: 50px;
-  margin-left: 300px;
-  height: 50px;
-  padding-left: 14px;
-  padding-top: 14px;
-  display: inline-block; }
-
-.container .personal-card .name-friend {
-  position: relative;
-  width: 60%;
-  height: auto;
-  margin: auto;
-  margin-top: 50px;
-  text-align: center;
-  border-radius: 7px;
-  padding: 10px;
-  color: #555;
-  background-color: #e0e0e0; }
-
-.container .personal-card .name-friend a:first-child {
-  color: #1e88e5;
-  text-decoration: none; }
-
-.container .personal-card .name-friend p:last-child {
-  color: #555; }
-
-.pub-search {
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
-  margin-top: 20px;
-  border-radius: 3px;
-  overflow: hidden;
-  padding: 10px;
-  height: auto; }
-  .pub-search .personal-card {
-    height: 100%; }
-  .pub-search a {
-    text-decoration: none;
-    font-size: 1.4em;
-    display: inline-block;
-    color: #1e88e5; }
-  .pub-search i {
-    font-size: 1.4em;
-    color: #555; }
-  .pub-search .pub-author {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center; }
-  .pub-search .profile-user-bg {
-    position: relative;
-    width: 80px;
-    height: 80px;
-    top: 0;
-    margin: auto;
-    display: block;
-    border-radius: 3px;
-    box-shadow: 0 1px 5px #1e88e5;
-    cursor: pointer;
-    -webkit-transition: all 0.3s ease-in;
-    -moz-transition: all 0.3s ease-in;
-    transition: all 0.3s ease-in; }
-    .pub-search .profile-user-bg:hover {
-      -webkit-transform: scale(1.1);
-      -moz-transform: scale(1.1);
-      transform: scale(1.1); }
-
-.comm {
-  font-size: 1.25em;
-  font-family: "Open Sans", sans-serif;
-  color: #555;
-  padding: 7px;
-  border-left: 3px solid #ff6347;
-  overflow: hidden;
-  height: auto;
-  width: 20px;
-  height: 20px;
-  margin: auto;
-  left: 15px; }
-
-.noelements-search {
-  position: relative;
-  display: block;
-  margin: auto;
-  text-align: center; }
-  .noelements-search .not-query {
-    font-size: 0.8em;
-    color: #555;
-    font-family: "Open Sans", sans-serif; }
-  .noelements-search h5 {
-    color: #555;
-    font-family: "Open Sans", sans-serif;
-    font-size: 2em; }
-
+html,body{color:#555 !important;font-family:"Open Sans",sans-serif !important;font-size:11.5px !important}.account-search,.messages-search{font-size:3em;color:#555;border-bottom:2px solid #e0e0e0;padding:10px;display:block}.messages-search{position:relative;top:20px;margin-bottom:20px}.container .personal-card{background-color:#fff;width:100%;margin-top:20px;height:300px;box-shadow:0 1px 5px rgba(0,0,0,0.4)}.container .header{height:150px}.container .personal-card .header .back-profile-user{width:100%;height:100%;position:relative}.container .personal-card .header .bg-user{width:80px;height:80px;position:relative;margin:auto;display:block}.container .personal-card .header .profile-user-bg{position:relative;margin-top:-80px;width:80px;height:80px;border-radius:3px;box-shadow:0 1px 5px #1e88e5;cursor:pointer;-webkit-transition:all 0.3s ease-in;transition:all 0.3s ease-in}.container .personal-card .header .profile-user-bg img{width:100%;height:100%}.container .personal-card .header .profile-user-bg:hover{-webkit-transform:scale(1.1);-moz-transform:scale(1.1);transform:scale(1.1);border-color:#1e88e5;opacity:1}.container .personal-card .header .like-him{position:relative;margin-top:-30px;float:right;margin-right:20px;background-color:#1e88e5;color:#fff;border-radius:100%;width:50px;margin-left:300px;height:50px;padding-left:14px;padding-top:14px;display:inline-block}.container .personal-card .name-friend{position:relative;width:60%;height:auto;margin:50px auto auto;text-align:center;border-radius:7px;padding:10px;color:#555;background-color:#e0e0e0}.container .personal-card .name-friend a:first-child{color:#1e88e5;text-decoration:none}.container .personal-card .name-friend p:last-child{color:#555}.pub-search{box-shadow:0 1px 5px rgba(0,0,0,0.4);margin-top:20px;border-radius:3px;overflow:hidden;padding:10px;height:auto}.pub-search .personal-card{height:100%}.pub-search a{text-decoration:none;font-size:1.4em;display:inline-block;color:#1e88e5}.pub-search i{font-size:1.4em;color:#555}.pub-search .pub-author{padding-top:10px;padding-bottom:10px;text-align:center}.pub-search .profile-user-bg{position:relative;width:80px;height:80px;top:0;margin:auto;display:block;border-radius:3px;box-shadow:0 1px 5px #1e88e5;cursor:pointer;-webkit-transition:all 0.3s ease-in;-moz-transition:all 0.3s ease-in;transition:all 0.3s ease-in}.pub-search .profile-user-bg:hover{-webkit-transform:scale(1.1);-moz-transform:scale(1.1);transform:scale(1.1)}.comm{font-size:1.25em;font-family:"Open Sans",sans-serif;color:#555;padding:7px;border-left:3px solid tomato;overflow:hidden}.comm img{width:20px;height:20px;margin:auto;left:15px}.noelements-search{position:relative;display:block;margin:auto;text-align:center}.noelements-search .not-query{font-size:0.8em;color:#555;font-family:"Open Sans",sans-serif}.noelements-search h5{color:#555;font-family:"Open Sans",sans-serif;font-size:2em}
 /*# sourceMappingURL=amigos.css.map */
