--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -88,8 +88,7 @@ html, body
   position: relative
   width: 60%
   height: auto
-  margin: auto
-  margin-top: 50px
+  margin: 50px auto auto
   text-align: center
   border-radius: 7px
   padding: 10px
@@ -156,13 +155,12 @@ html, body
   padding: 7px
   border-left: 3px solid $tomatocolor
   overflow: hidden
-  height: auto
 
   & img
-  width: 20px
-  height: 20px
-  margin: auto
-  left: 15px
+    width: 20px
+    height: 20px
+    margin: auto
+    left: 15px
 
 .noelements-search
   position: relative
