--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -9,7 +9,7 @@ body
   font-style: normal
   font-weight: 300
 
-hgroup
+.hgroup
   border-bottom: 1px solid $greyblue
   margin-bottom: 70px
   padding: 10px 0
@@ -285,11 +285,6 @@ label[for="id_hiddenMenu"]
   font-family: 'Open Sans', sans-serif
   font-weight: 100
   position: relative
-
-hgroup
-  position: relative
-  margin-bottom: 30px
-  margin-top: 0
 
 .cn
   font-size: 20px
