--- a/skyfolk/templates/account/cf-changepass.html
+++ b/skyfolk/templates/account/cf-changepass.html
@@ -5,10 +5,10 @@
 {% block additional_files %}
 {% endblock%}
 {% block cf-title %}
-<hgroup>
+<div class="hgroup">
 	<h4 class="cn"> Contraseña </h4>
 	<h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
-</hgroup>
+</div>
 {% endblock %}
 {% block cf-form %}
 <div class="wr">
