--- a/skyfolk/templates/account/cf-relations.html
+++ b/skyfolk/templates/account/cf-relations.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <head>
-    <link rel="stylesheet" type="text/css" href="im.css" onload="if(media!='all')media='all'">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <header>
 <body>
 <header>
-  <hgroup>
+  <div class="hgroup">
     <h2> Mis lazos <i class="fontawesome-link"></i></h2>
     <h4>¡Cambia o modifica los lazos con tus contactos!</h4>
-  </hgroup>
+  </div>
   <a class="fontawesome-fire" title="Afinidad" href="afinidad/afinidad.html"></a>
 </header>
     
