--- a/avatar/templates/avatar/confirm_delete.html
+++ b/avatar/templates/avatar/confirm_delete.html
@@ -19,10 +19,10 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block cf-title %}
-<hgroup>
+<div class="hgroup">
 	<h4 class="cn"> Imágen de perfil </h4>
 	<h6 class="ch"> Elimina aquellos avatares que no necesites </h6>
-</hgroup>
+</div>
 {% endblock %}
 {% block cf-form %}
 <div id="delete-avatar" class="col-lg-12 col-md-10 col-sm-12 current-avatar">
