--- a/skyfolk/static/css/setup.css
+++ b/skyfolk/static/css/setup.css
@@ -1,189 +1,2 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
-@import url(https://fonts.googleapis.com/css?family=Pacifico);
-body {
-  background-color: #fafafa;
-  padding: 0;
-  font-family: "Open Sans", sans-serif; }
-
-.div-messages {
-  background-color: #eee;
-  border-radius: 3px;
-  position: absolute;
-  display: block;
-  margin-top: 0;
-  margin-left: 1.25%;
-  width: 300px;
-  padding: 10px;
-  height: auto; }
-  .div-messages ul {
-    list-style: none; }
-    .div-messages ul li {
-      display: list-item; }
-
-.ctrlHolder {
-  padding: 10px; }
-
-.wrapper {
-  position: relative;
-  margin-top: 10%; }
-  .wrapper .need-help {
-    width: 120px;
-    height: 120px;
-    display: block;
-    position: relative;
-    margin: auto;
-    -webkit-transition: all 0.2s linear;
-    -moz-transition: all 0.2s linear;
-    trasnsition: all 0.2s linear;
-    border-radius: 100%;
-    padding: 5px;
-    border: 3px solid transparent;
-    cursor: pointer; }
-  .wrapper .need-help:hover {
-    border: 3px solid #64B5F6; }
-
-.display-info-reset-password {
-  width: 100%;
-  max-height: 40px;
-  position: fixed;
-  top: 0;
-  background-color: #fff;
-  padding: 0 12px; }
-  .display-info-reset-password h6 {
-    color: #bdbdbd;
-    font-size: 1.45em;
-    display: inline-block; }
-  .display-info-reset-password .logotipo_skyfolk {
-    position: relative;
-    float: left;
-    display: inline-block; }
-  .display-info-reset-password .logotipo_skyfolk h5 {
-    font-family: "Pacifico", cursive;
-    font-size: 1.45em;
-    display: inline-block;
-    margin-right: 20px;
-    margin-left: 7px;
-    margin-top: 4px;
-    cursor: pointer;
-    color: #555; }
-  .display-info-reset-password .logotipo_skyfolk i {
-    color: #0096d7;
-    text-shadow: 1px 1px 1px #ccc; }
-
-.menu {
-  position: relative;
-  width: 400px;
-  text-align: center;
-  height: auto;
-  margin-top: 60px;
-  margin-right: auto;
-  margin-left: auto;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-  background-color: #fff; }
-
-.contacto-password, .lost-password {
-  color: grey; }
-
-ul {
-  list-style: none; }
-  ul li {
-    margin-bottom: 15px;
-    margin-right: 7px;
-    margin-left: 7px;
-    display: inline-block; }
-
-.lost-password-title, .title-email {
-  text-align: center;
-  color: grey; }
-
-strong {
-  text-align: center;
-  color: grey;
-  font-weight: 100;
-  font-family: "Open Sans", sans-serif;
-  font-size: 12px; }
-
-p {
-  text-align: center; }
-
-form {
-  position: relative;
-  display: block;
-  width: 40%;
-  height: auto;
-  margin: auto; }
-
-.email_list {
-  background-color: #eee;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
-  .email_list label {
-    color: #616161;
-    display: inline-block;
-    font-size: 1.1em; }
-  .email_list button {
-    background-color: #64B5F6 !important;
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-    left: 10%;
-    overflow: hidden;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    z-index: 1;
-    text-decoration: none;
-    color: #FFF;
-    text-align: center;
-    letter-spacing: 1px;
-    border: none;
-    border-radius: 2px;
-    height: 36px;
-    line-height: 36px;
-    outline: 0;
-    padding: 0 2rem;
-    text-transform: uppercase; }
-  .email_list input[type="submit"] {
-    background-color: #64B5F6 !important;
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-    float: right;
-    overflow: hidden;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    z-index: 1;
-    text-decoration: none;
-    color: #FFF;
-    text-align: center;
-    letter-spacing: 1px;
-    border: none;
-    border-radius: 2px;
-    height: 36px;
-    line-height: 36px;
-    outline: 0;
-    padding: 0 2rem;
-    text-transform: uppercase; }
-
-.verified {
-  color: #8bc34a; }
-
-.unverified {
-  color: tomato; }
-
-.primary {
-  color: #1e88e5; }
-
-button[name="action_add"] {
-  float: right !important;
-  left: 0; }
-
-input[type="email"]:focus, button {
-  border-bottom: 1px solid #64B5F6 !important;
-  box-shadow: 0 1px 0 0 #64B5F6 !important; }
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);@import url(https://fonts.googleapis.com/css?family=Pacifico);body{background-color:#fafafa;padding:0;font-family:"Open Sans",sans-serif}.div-messages{background-color:#eee;border-radius:3px;position:absolute;display:block;margin-top:0;margin-left:1.25%;width:300px;padding:10px;height:auto}.div-messages ul{list-style:none}.div-messages ul li{display:list-item}.ctrlHolder{padding:10px}.wrapper{position:relative;margin-top:10%}.wrapper .need-help{width:120px;height:120px;display:block;position:relative;margin:auto;-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;trasnsition:all 0.2s linear;border-radius:100%;padding:5px;border:3px solid transparent;cursor:pointer}.wrapper .need-help:hover{border:3px solid #64B5F6}.display-info-reset-password{width:100%;max-height:40px;position:fixed;top:0;background-color:#fff;padding:0 12px}.display-info-reset-password h6{color:#bdbdbd;font-size:1.45em;display:inline-block}.display-info-reset-password .logotipo_skyfolk{position:relative;float:left;display:inline-block}.display-info-reset-password .logotipo_skyfolk h5{font-family:"Pacifico",cursive;font-size:1.45em;display:inline-block;margin-right:20px;margin-left:7px;margin-top:4px;cursor:pointer;color:#555}.display-info-reset-password .logotipo_skyfolk i{color:#0096d7;text-shadow:1px 1px 1px #ccc}.menu{position:relative;width:400px;text-align:center;height:auto;margin-top:60px;margin-right:auto;margin-left:auto;box-shadow:0 1px 5px rgba(0,0,0,0.15);background-color:#fff}.contacto-password,.lost-password{color:grey}ul{list-style:none}ul li{margin-bottom:15px;margin-right:7px;margin-left:7px;display:inline-block}.lost-password-title,.title-email{text-align:center;color:grey}strong{text-align:center;color:grey;font-weight:100;font-family:"Open Sans",sans-serif;font-size:12px}p{text-align:center}form{position:relative;display:block;width:40%;height:auto;margin:auto}.email_list{background-color:#eee;box-shadow:0 1px 5px rgba(0,0,0,0.15)}.email_list label{color:#616161;display:inline-block;font-size:1.1em}.email_list button{background-color:#64B5F6 !important;position:relative;cursor:pointer;display:inline-block;left:10%;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-tap-highlight-color:transparent;z-index:1;text-decoration:none;color:#FFF;text-align:center;letter-spacing:1px;border:none;border-radius:2px;height:36px;line-height:36px;outline:0;padding:0 2rem;text-transform:uppercase}.email_list input[type="submit"]{background-color:#64B5F6 !important;position:relative;cursor:pointer;display:inline-block;float:right;overflow:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-tap-highlight-color:transparent;z-index:1;text-decoration:none;color:#FFF;text-align:center;letter-spacing:1px;border:none;border-radius:2px;height:36px;line-height:36px;outline:0;padding:0 2rem;text-transform:uppercase}.verified{color:#8bc34a}.unverified{color:tomato}.primary{color:#1e88e5}button[name="action_add"]{float:right !important;left:0}input[type="email"]:focus,button{border-bottom:1px solid #64B5F6 !important;box-shadow:0 1px 0 0 #64B5F6 !important}
 /*# sourceMappingURL=setup.css.map */
