--- a/skyfolk/static/sass/cf-email.sass
+++ b/skyfolk/static/sass/cf-email.sass
@@ -52,8 +52,7 @@ strong
     border-bottom: 1px solid #c9c9c9
     color: #212121
     background: transparent
-    padding: 5px
-    padding-bottom: 8px
+    padding: 5px 5px 8px
     height: auto
     box-shadow: none
     font-size: 13px
