--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -665,12 +665,6 @@ $followcolor: #64b5f6
 .middle
   vertical-align: middle
 
-a
-  cursor: pointer
-  color: #46494c
-a:hover
-  color: #1c84d4
-
 #controls-container
   color: white
   position: fixed
@@ -1398,14 +1392,13 @@ ul.table > li
   height: 400px
   margin: 50% auto auto
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
-
-.cmt-hidden h3
-  font-size: 2em
-  color: #212121
-  position: relative
-  text-align: center
-  font-family: 'Open Sans', sans-serif
-  top: 180px
+  & h3
+    font-size: 2em
+    color: #212121
+    position: relative
+    text-align: center
+    font-family: 'Open Sans', sans-serif
+    top: 180px
 
 .ctrl
   position: absolute
