--- a/skyfolk/static/sass/timeline.sass
+++ b/skyfolk/static/sass/timeline.sass
@@ -1,8 +1,11 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400)
-
 $blueskyfolk: #1e88e5
-/* NOTA IMPORTANTE: LOS COMENTARIOS DENTRO DE LOS ESTILOS SON PARA EL TIMELINE DE ABAJO */
-
+#section .wrapperx-hidden
+  position: relative
+  width: 100%
+  float: left
+  left: 0
+  height: auto
+  background: transparent
 #section .wrapperx
   position: relative
   width: 2%
@@ -105,18 +108,14 @@ $blueskyfolk: #1e88e5
     width: 80%
     border-radius: 7px
     position: relative
-    margin: auto
     left: 10%
-    margin-top: 30px
-
+    margin: 30px auto auto
 
   & .timeline-pub .second .acontecimiento
     width: 45px
     height: 45px
     background-size: 100%
-    background-repeat: no-repeat
-    background-position: center
-    background-color: #fff
+    background: #fff no-repeat center
     border: 1px solid #1e88e5
     position: relative
     display: inline-block
@@ -131,11 +130,9 @@ $blueskyfolk: #1e88e5
   & .timeline-pub .second .controles
     position: relative
     display: inline-block
-    margin: auto
     width: 100%
     height: 40px
-    margin-top: 10px
-
+    margin: 10px auto auto
 
   & .timeline-pub .second .controles ul
     margin: auto
