--- a/skyfolk/templates/account/cf-pincode.html
+++ b/skyfolk/templates/account/cf-pincode.html
@@ -9,10 +9,10 @@
 <link rel="stylesheet" href="{{STATIC_URL}}css/pincode.css" onload="if(media!='all')media='all'">
 {% endblock %}
 {% block cf-title %}
-<hgroup>
+<div class="hgroup">
 	<h4 class="cn"> Pincode </h4>
 	<h6 class="ch"> Consulta tu pincode. </h6>
-</hgroup>
+</div>
 {% endblock %}
 {% block cf-form %}
     <div class="col-lg-12 col-md-12 col-sm-12 wrapper-profilex">
