--- a/skyfolk/templates/account/cf-privacity.html
+++ b/skyfolk/templates/account/cf-privacity.html
@@ -8,10 +8,10 @@
 <link rel="stylesheet" href="{{STATIC_URL}}css/privacidad.css">
 {% endblock %}
 {% block cf-title %}
-<hgroup>
+<div class="hgroup">
 	<h4 class="cn"> Privacidad </h4>
 	<h6 class="ch"> Cambia la privacidad de tu perfil </h6>
-</hgroup>
+</div>
 {% endblock %}
 {% block cf-form %}
 <form id='formulario' method='post' enctype='multipart/form-data' action="">{% csrf_token %}
