--- a/skyfolk/templates/account/followers.html
+++ b/skyfolk/templates/account/followers.html
@@ -7,7 +7,7 @@
 {% block title %} <title>Seguidores {{ request.user.username }}</title> {% endblock %}
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css" onload="if(media!='all')media='all'">
-    <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/profile.css" onload="if(media!='all')media='all'">
 {% endblock %}
 {% block content %}
 <div class="container">
