--- a/skyfolk/templates/account/password_change.html
+++ b/skyfolk/templates/account/password_change.html
@@ -8,10 +8,10 @@
 {% load i18n %}
 
 {% block cf-title %}
-	<hgroup>
+	<div class="hgroup">
 		<h4 class="cn"> Contraseña </h4>
 		<h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
-	</hgroup>
+	</div>
 {% endblock %}
 
 
