+ V2 + Mejoras en el modulo allauth

--- a/skyfolk/static/sass/avatar.sass
+++ b/skyfolk/static/sass/avatar.sass
@@ -157,23 +157,23 @@ $whitewithopacity: rgba(255, 255, 255, .8)
   & label[for="id_avatar"]
     display: none
 
-input
-  background-color: transparent
-  border: medium none
-  border-radius: 2px
-  display: inline-block
-  cursor: pointer
-  height: 36px
-  color: $blueskyfolk
-  line-height: 36px
-  margin-top: 15px
-  letter-spacing: .5px
-  text-align: center
-  padding: 0 2rem
-  outline: none
-  transition: $default-transition
-  text-transform: uppercase
-  text-decoration: none
+  /*& input
+    background-color: transparent
+    border: medium none
+    border-radius: 2px
+    display: inline-block
+    cursor: pointer
+    height: 36px
+    color: $blueskyfolk
+    line-height: 36px
+    margin-top: 15px
+    letter-spacing: .5px
+    text-align: center
+    padding: 0 2rem
+    outline: none
+    transition: $default-transition
+    text-transform: uppercase
+    text-decoration: none
 
-  &:hover
-    background-color: $whitewithopacity
+    &:hover
+      background-color: $whitewithopacity*/
