--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -1,5 +1,10 @@
-@import url(http://fonts.googleapis.com/css?family=Pacifico); /* ONLY FOR LOGO */
-
+@font-face {
+  font-family: 'Pacifico';
+  font-weight: 400;
+  font-style: normal;
+  src: url('../fonts/Pacifico-regular/Pacifico-regular.eot');
+  src: url('../fonts/Pacifico-regular/Pacifico-regular.eot?#iefix') format('embedded-opentype'), local('Pacifico Regular'), local('Pacifico-regular'), url('../fonts/Pacifico-regular/Pacifico-regular.woff2') format('woff2'), url('../fonts/Pacifico-regular/Pacifico-regular.woff') format('woff'), url('../fonts/Pacifico-regular/Pacifico-regular.ttf') format('truetype'), url('../fonts/Pacifico-regular/Pacifico-regular.svg#Pacifico') format('svg')
+}
 /*caja de busqueda*/
 .field > form input[type=text],
 .field > form button {
@@ -11,7 +16,6 @@
   right: 200px;
   position:relative;
   width: 300px;
-  background-color: #f0f0f0;
   opacity: 0.6;
   border: none;
   height: 25px;
@@ -20,23 +24,19 @@
   display: block;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
-  appearance: none;
   box-shadow: none;
   outline: none;
   transition: all .3s ease-in;
   -webkit-transition: all .3s ease-in;
   -moz-transition: all .3s ease-in;
   border-radius: 7px;
-  background-image: url('/static/img/search-icon.png');
-  background-repeat: no-repeat;
-  background-position: 95%;
+  background: #f0f0f0 url('/static/img/search-icon.png') no-repeat 95%;
   background-size: 13px;
-  padding: 0px 20px;
+  padding: 0 20px;
   color: black;
 }
 .field > form input[type=text]:focus {
-  background-color: #cccccc;
-  background-position: 1%;
+    background: #cccccc 1%;
 }
 .field > form input[type="text"] {
   transition: all .3s ease-in;
@@ -55,11 +55,11 @@
   cursor: pointer; }
 
 #search-noelements {
-  margin: 0 auto 0 auto;
-  width: 40%;
-  text-align: center;
-  font: 1.6em "Montserrat Alternates";
-  margin-top: 10px; }
+    width: 40%;
+    text-align: center;
+    font: 1.6em "Montserrat Alternates";
+    margin: 10px auto 0;
+}
 
 /* cf */
 .float-right {
@@ -85,7 +85,7 @@
   float: left;
   display: inline-block;
   position: relative;
-  right: 0px;
+  right: 0;
   top: 14px;
   list-style-type: none;
   margin-left: 50px;
@@ -98,9 +98,8 @@
   background-color: tomato;
   font-size: 10px;
   padding: 5px 5px;
-  border-radius: 100%;
   text-decoration: none;
-  border-top-left-radius: 10px;
+  border-radius: 10px 100% 100% 100%;
   display: inline-block;
   color: white; }
 
@@ -202,7 +201,7 @@
   box-shadow: 1px 1px 1px #f0f0f0;
   list-style-type: none;
   position: fixed;
-  top: 0px;
+  top: 0;
   z-index: 9999; }
 
 /* Menu opcional para usuario */
@@ -221,7 +220,7 @@
   text-align: center;
   margin-left: 5px;
   margin-top: 10px;
-  padding: 0px 10px;
+  padding: 0 10px;
   color: #424242;
   font-size: 1.4em;
   font-weight: 100;
@@ -343,7 +342,7 @@
 .box-tool img {
   width: 120px;
   height: 120px;
-  top: 0px;
+  top: 0;
   cursor: pointer;
   position: fixed; }
 
@@ -412,7 +411,7 @@
   transition: all 0.2s ease-out 0s;
   height: 36px;
   line-height: 36px;
-  padding: 0px 2rem;
+  padding: 0 2rem;
   text-transform: uppercase;
   text-decoration: none;
   color: #1e88e5;
