--- a/skyfolk/templates/account/confirmation_changepass.html
+++ b/skyfolk/templates/account/confirmation_changepass.html
@@ -4,10 +4,12 @@
 {% load i18n %}
 
 {% block cf-title %}
+    <div class="hgroup">
 	<h4 class="cn"> Contraseña </h4>
 	<h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
+    </div>
 {% endblock %}
 
 {% block cf-form %}
-	<br><br><br>Contraseña cambiada con éxito.
+	<br><p class="password-reset-done">Contraseña cambiada con éxito.</p>
 {% endblock %}
