--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -61,6 +61,7 @@ html, body
   & img
     width: 100%
     height: 100%
+    display: block
 
 .container .personal-card .header .profile-user-bg:hover
   -webkit-transform: scale(1.1)
