--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -2,6 +2,8 @@ html {
   color: #555;
   font-family: "Open Sans", sans-serif;
   font-size: 11.5px;
+  font-style: normal;
+  font-weight: 300;
   -webkit-font-smoothing: antialiased; }
 
 a, a:visited {
