--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -8,6 +8,7 @@ html
   font-size: 11.5px
   font-style: normal
   font-weight: 300
+  -webkit-font-smoothing: antialiased
 
 .hgroup
   border-bottom: 1px solid $greyblue
