--- a/skyfolk/static/sass/notifications.sass
+++ b/skyfolk/static/sass/notifications.sass
@@ -1,5 +1,8 @@
 $defaultcolor: #555
 $blueskyfolk: #1e88e5
+$buttonbackgroundcolor: #eee
+$redcolorbutton: #f44336
+$greenbuttoncolor: #4caf50
 
 html
   color: $defaultcolor
@@ -41,6 +44,35 @@ html
 
     & .fa-eye, .fa-eye-slash, .fa-trash
       margin: auto 3px 0 3px
+
+    & .notification-buttons
+      width: 100%
+      position: relative
+      margin-top: 5%
+      text-align: center
+      & button
+        border: medium none
+        border-radius: 2px
+        height: 36px
+        line-height: 36px
+        padding: 0 2rem
+        display: inline-block
+        text-transform: uppercase
+        vertical-align: middle
+        text-decoration: none
+        background-color: transparent
+        text-align: center
+        letter-spacing: 0.5px
+        transition: all 0.2s ease-out 0s
+        cursor: pointer
+        outline: none
+        &:nth-child(2)
+          color: $greenbuttoncolor
+        &:nth-child(1)
+          color: $redcolorbutton
+        &:hover
+          background-color: $buttonbackgroundcolor
+          opacity: 0.8
 
 .mark-all-as-read-template, .mark-all-as-deleted-template, .mark-all-as-unread-template
   margin: 0 auto 0 2%
