--- a/notifications/templates/notifications/list.html
+++ b/notifications/templates/notifications/list.html
@@ -12,7 +12,7 @@
     </div>
         <ul class="notifications">
           {% for notice in notifications %}
-            <li class="col-sm-12 col-md-12 col-lg-3">{% include 'notifications/notice.html' %}</li>
+            <li class="col-sm-12 col-md-12 col-lg-3" data-id="{{ notice.id }}">{% include 'notifications/notice.html' %}</li>
           {% endfor %}
         </ul>
     </div>
