--- a/notifications/templates/notifications/list.html
+++ b/notifications/templates/notifications/list.html
@@ -2,15 +2,18 @@
 {% block include_files %}
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <link rel="stylesheet" href="{{STATIC_URL}}css/notifications.css" type="text/css" media="all" onload="if(media!='all')media='all'">
+    {% block title %} <title>Notificaciones - {{ request.user }}.</title> {% endblock %}
 {% endblock %}
 {% block content %}
     <div class="container">
+    {% if notifications %}
     <div class="all-notifications-options">
         <a class="mark-all-as-read-template" href="{% url 'notifications:mark_all_as_read' %}">Todas leídas</a>
         <a class="mark-all-as-unread-template" href="{% url 'notifications:mark_all_as_unread' %}">Todas sin leer</a>
         <a class="mark-all-as-deleted-template" href="{% url 'notifications:mark_all_as_deleted' %}">Eliminar todas</a>
     </div>
-        <ul class="notifications">
+    {% endif %}
+        <ul class="notifications list-notifications">
           {% for notice in notifications %}
             <li class="col-sm-12 col-md-12 col-lg-3" data-id="{{ notice.id }}">{% include 'notifications/notice.html' %}</li>
           {% endfor %}
