--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -25,7 +25,7 @@
           {% else %}
           <a id="config-avatar" class="Contraseña" onclick="toProfile('{% url 'avatar_add' %}')"><i class="fa fa-camera-retro"></i><br>Imagen de perfil</a>
           {% endif %}
-          <a id="config-email" class="perfil" onclick="toProfile('/config/emails')"><i class="fa fa-envelope"></i><br>Email</a>
+          <a id="config-email" class="perfil" onclick="toProfile('/config/email')"><i class="fa fa-envelope"></i><br>Email</a>
           <a id="config-privacity" class="perfil" onclick="toProfile('/config/privacity')"><i class="fa fa-lock"></i><br>Privacidad</a>
           <a id="config-personal-pin" class="perfil" onclick="toProfile('/config/pincode')"><i class="fa fa-asterisk"></i><br>Pin personal</a>
       </nav>
