--- a/skyfolk/templates/account/email.html
+++ b/skyfolk/templates/account/email.html
@@ -17,6 +17,16 @@
 {% endblock %}
 
 {% block cf-form %}
+    {% if messages %}
+    <div class="div-messages">
+        <strong>{% trans "Messages" %}:</strong>
+      <ul>
+        {% for message in messages %}
+            <li>{{message}}</li>
+        {% endfor %}
+      </ul>
+    </div>
+    {% endif %}
 <h1 class="title-email">{% trans "E-mail Addresses" %}</h1>
     {% if user.emailaddress_set.all %}
     <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
@@ -28,10 +38,8 @@
       {% for emailaddress in user.emailaddress_set.all %}
     <div class="ctrlHolder">
           <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
-
           <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
-
-    {{ emailaddress.email }}
+        {{ emailaddress.email }}
         {% if emailaddress.verified %}
         <span class="verified">{% trans "Verified" %}</span>
         {% else %}
