--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -11,8 +11,8 @@
     </ul>
     <div class="col-lg-12 col-md-12 col-sm-12 nav-vertical-controls">
         <div class="controls-notifications">
-            <button class="nav-button-notifications"><a id="clear-notify">Limpiar</a></button>
-            <button class="nav-button-notifications"><a href="/inbox/notifications/">Todas</a></button>
+            <a id="clear-notify" class="nav-button-notifications">Limpiar</a>
+            <a href="/inbox/notifications/" class="nav-button-notifications">Todas</a>
       </div>
       </div>
 </div>
