--- a/skyfolk/templates/account/account_inactive.html
+++ b/skyfolk/templates/account/account_inactive.html
@@ -1,12 +1,21 @@
-{% extends "account/base.html" %}
+{% extends "account/base_cf.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block content %}
+{% block cf-title %}
+<div class="hgroup">
+	<h4 class="cn"> Eliminar cuenta </h4>
+	<h6 class="ch"> Elimina tu cuenta de skyfolk. </h6>
+</div>
+{% endblock %}
+
+{% block cf-form %}
 <div class="wrapper">
-    <h1 class="lost-password-title">{% trans "Account Inactive" %}</h1>
-    <p>{% trans "This account is inactive." %}</p>
+<form action="." method="POST">{% csrf_token %}
+    {{ delete_form.as_p }}
+    <button class="btn btn-primary" type="submit" name="action">{% trans "Confirm" %}</button>
+</form>
 </div>
 {% endblock %}
