--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -38,10 +38,6 @@ html
   border-radius: 8px
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
 
-  & span
-    left: 0
-    position: relative
-    top: 40px
   & .div-messages
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
     position: relative
@@ -344,3 +340,16 @@ label[for="id_hiddenMenu"]
 /* Message password reset done */
 .password-reset-done
   margin-left: 1.5%
+
+/* Account disabled */
+
+.disable-account-wrapper p
+  font-size: 1.3em
+  color: $greycolor
+  display: block
+  text-align: center
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15)
+  margin-bottom: 5%
+  padding: 10px
+  & label, input
+    float: left
