--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -1441,3 +1441,8 @@ ul.table > li
 
 .move-body
   margin-right: 300px
+
+/* if account is not active */
+.account-disabled
+  text-align: center
+  font-size: 2em
