--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -16,7 +16,11 @@
             {% else %}
             <img src="{{STATIC_URL}}img/nuevo_back.png" class="user-bg">
             {% endif %}
-            <span class="fa fa-paw fa-lg" title="Acerca de {{ user_profile.username }}"></span>
+            {% if not isFollower %}
+                <span class="fa fa-paw fa-lg" title="Acerca de {{ user_profile.username }}"></span>
+            {% else %}
+                <span class="fa fa-paw fa-lg" title="Acerca de {{ user_profile.username }} - ¡Te sigue!" style="color: #1e88e5"></span>
+            {% endif %}
             <!--<input type="checkbox" id="button-menu"  />-->
             {% if user.is_authenticated and user.username != user_profile.username and existFollowRequest == True %}  <!-- si es usuario esta visitando un perfil que no es el suyo -->
             <!-- Cambiamos el icono "+" por "reloj" mientras esperamos que acepte la peticion -->
