--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -29,6 +29,7 @@
     <script src="{{STATIC_URL}}js/jquery.easytabs.js" type="text/javascript"></script>
     <script async src="{{STATIC_URL}}js/jquery.hashchange.min.js" type="text/javascript"></script>
 <div class="container">
+    {% if user_profile.is_active %}
   <div class="col-lg-8 col-md-6 col-sm-12">
 <!-- Contenedor principal, engloba el tablon, widgets... [IMPORTANTE]-->
     <div class="container">
@@ -89,7 +90,6 @@
     </div>
   </div>
 </div>
-
 <!-- IGNORAR, SOLO MUESTRA OBJETOS AL HACER SCROLL -->
     <script async>
 
@@ -199,5 +199,7 @@ Para el manejo de las pestañas del usuario
     $('#addfriend').replaceWith('<span class="fa fa-remove" id="addfriend" title="Dejar de seguir" style="color: #29b203;" onclick=AJAX_requestfriend("noabort");>'+' '+'</div>');
     </script>
   {% endif %}
-
+        {% else %}
+        <h1 class="account-disabled">Cuenta desactivada.</h1>
+{% endif %}
 {% endblock %}
