+ V2 + Borrar permanentemente cuenta

--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -28,6 +28,7 @@
           <a id="config-email" class="perfil" onclick="toProfile('/config/email')"><i class="fa fa-envelope"></i><br>Email</a>
           <a id="config-privacity" class="perfil" onclick="toProfile('/config/privacity')"><i class="fa fa-lock"></i><br>Privacidad</a>
           <a id="config-personal-pin" class="perfil" onclick="toProfile('/config/pincode')"><i class="fa fa-asterisk"></i><br>Pin personal</a>
+          <a id="config-black-list" class="perfil" onclick="toProfile('/config/blocked')"><i class="fa fa-ban" aria-hidden="true"></i><br>Usuarios bloqueados</a>
           <a id="config-delete-account" class="perfil" onclick="toProfile('/config/delete_account')"><i class="fa fa-minus" aria-hidden="true"></i><br>Eliminar cuenta</a>
       </nav>
   </div>
